# terracon_client_desktop

./: .gitignore  CMakeLists.txt  proto.txt
SRC/: main.cpp  mainwindow.cpp  mainwindow.h
SRC/resources/: resources.qrc
TOOLS/: win-qt6-msvc17-64-debug.bat
